--- a/sites/all/themes/omega/omega/css/modules/aggregator/aggregator.theme-rtl.css
+++ b/sites/all/themes/omega/omega/css/modules/aggregator/aggregator.theme-rtl.css
@@ -2,7 +2,6 @@
  * @file
  * Aggregator theme CSS for right to left languages.
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/aggregator\/aggregator\.theme-rtl\.scss}line{font-family:\000036}}
 .feed-source .feed-icon {
   float: left; }
-
-/*# sourceMappingURL=aggregator.theme-rtl.css.map */
