--- a/sites/all/themes/omega/omega/css/modules/color/color.admin-rtl.css
+++ b/sites/all/themes/omega/omega/css/modules/color/color.admin-rtl.css
@@ -2,46 +2,55 @@
  * @file
  * Right-to-left specific stylesheet for the Color module.
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/color\/color\.admin-rtl\.scss}line{font-family:\000036}}
 #placeholder {
   left: 0;
   right: auto; }
 
 /* Palette */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/color\/color\.admin-rtl\.scss}line{font-family:\0000312}}
 .color-form .form-item {
   padding-left: 0;
   padding-right: 1em; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/color\/color\.admin-rtl\.scss}line{font-family:\0000316}}
 .color-form label {
   float: right;
   clear: right; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/color\/color\.admin-rtl\.scss}line{font-family:\0000321}}
 .color-form .form-text,
 .color-form .form-select {
   float: right; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/color\/color\.admin-rtl\.scss}line{font-family:\0000324}}
 .color-form .form-text {
   margin-right: 0;
   margin-left: 5px; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/color\/color\.admin-rtl\.scss}line{font-family:\0000328}}
 #palette .hook {
   float: right; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/color\/color\.admin-rtl\.scss}line{font-family:\0000333}}
 #palette .down,
 #palette .up,
 #palette .both {
-  background: image-url("modules/color/hook-rtl.png") no-repeat 0 0; }
+  background: url('../../../images/modules/color/hook-rtl.png?1432693563') no-repeat 0 0; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/color\/color\.admin-rtl\.scss}line{font-family:\0000336}}
 #palette .up {
   background-position: 0 -27px; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/color\/color\.admin-rtl\.scss}line{font-family:\0000339}}
 #palette .both {
   background-position: 0 -54px; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/color\/color\.admin-rtl\.scss}line{font-family:\0000342}}
 #palette .lock {
   float: right;
   right: -10px; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/color\/color\.admin-rtl\.scss}line{font-family:\0000346}}
 html.js #preview {
   float: right; }
-
-/*# sourceMappingURL=color.admin-rtl.css.map */
