--- a/sites/all/themes/omega/omega/css/modules/contextual/contextual.theme.css
+++ b/sites/all/themes/omega/omega/css/modules/contextual/contextual.theme.css
@@ -1,57 +1,108 @@
-/*
-Error: File to import not found or unreadable: compass.
-       Load path: C:/Bitnami/wampstack-5.4.29-0/apache2/htdocs/drupalcl/sites/all/themes/omega/omega/sass/modules/contextual
-        on line 11 of C:\Bitnami\wampstack-5.4.29-0\apache2\htdocs\drupalcl\sites\all\themes\omega\omega\sass\modules\contextual\contextual.theme.scss
+/**
+ * @file
+ * Styling for contextual links look and feel.
+ *
+ * We are proactivly making use of !important to ensure the contextual links
+ * styling isn't broken by unspecific selectors such as ".block a". In order to
+ * change the styling of the contextual links you should overwrite this file in
+ * your subtheme.
+ */
+/**
+ * Contextual link wrappers
+ */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/contextual\/contextual\.theme\.scss}line{font-family:\0000316}}
+.contextual-links-region-active {
+  outline: #999 dashed 1px; }
 
-6:  * styling isn't broken by unspecific selectors such as ".block a". In order to
-7:  * change the styling of the contextual links you should overwrite this file in
-8:  * your subtheme.
-9:  *\/
-10: 
-11: @import "compass";
-12: 
-13: /**
-14:  * Contextual link wrappers
-15:  *\/
-16: .contextual-links-region-active {
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/contextual\/contextual\.theme\.scss}line{font-family:\0000319}}
+.contextual-links-wrapper {
+  font-size: 12px !important; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/contextual\/contextual\.theme\.scss}line{font-family:\0000322}}
+  .contextual-links-wrapper a {
+    text-decoration: none; }
 
-Backtrace:
-C:\Bitnami\wampstack-5.4.29-0\apache2\htdocs\drupalcl\sites\all\themes\omega\omega\sass\modules\contextual\contextual.theme.scss:11
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/import_node.rb:66:in `rescue in import'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/import_node.rb:45:in `import'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/import_node.rb:28:in `imported_file'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/import_node.rb:37:in `css_import?'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:301:in `visit_import'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/base.rb:36:in `visit'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/stack.rb:79:in `block in with_base'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/stack.rb:115:in `with_frame'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/stack.rb:79:in `with_base'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:158:in `visit'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/base.rb:52:in `map'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/base.rb:52:in `visit_children'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:167:in `block in visit_children'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:166:in `visit_children'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/base.rb:36:in `block in visit'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:186:in `visit_root'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/base.rb:36:in `visit'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:157:in `visit'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:8:in `visit'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/root_node.rb:36:in `css_tree'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/root_node.rb:29:in `render_with_sourcemap'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/engine.rb:368:in `_render_with_sourcemap'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/engine.rb:285:in `render_with_sourcemap'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/exec/sass_scss.rb:396:in `run'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/exec/sass_scss.rb:62:in `process_result'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/exec/base.rb:52:in `parse'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/exec/base.rb:19:in `parse!'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/bin/sass:13:in `<top (required)>'
-C:/Program Files (x86)/Koala/bin/sass:18:in `load'
-C:/Program Files (x86)/Koala/bin/sass:18:in `<main>'
+/**
+ * Contextual trigger.
 */
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: File to import not found or unreadable: compass.\A        Load path: C:/Bitnami/wampstack-5.4.29-0/apache2/htdocs/drupalcl/sites/all/themes/omega/omega/sass/modules/contextual\A         on line 11 of C:\Bitnami\wampstack-5.4.29-0\apache2\htdocs\drupalcl\sites\all\themes\omega\omega\sass\modules\contextual\contextual.theme.scss\A \A 6:  * styling isn't broken by unspecific selectors such as \".block a\". In order to\A 7:  * change the styling of the contextual links you should overwrite this file in\A 8:  * your subtheme.\A 9:  */\A 10: \A 11: @import \"compass\";\A 12: \A 13: /**\A 14:  * Contextual link wrappers\A 15:  */\A 16: .contextual-links-region-active {"; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/contextual\/contextual\.theme\.scss}line{font-family:\0000330}}
+.contextual-links-trigger {
+  /* Positioning */
+  height: 18px;
+  /* Box Model */
+  margin: 0 !important;
+  padding: 0 2px !important;
+  width: 28px;
+  /* Other Declarations */
+  background: transparent url('../../../images/modules/contextual/gear-select.png?1432693563') no-repeat 2px 0 !important;
+  border: 1px solid transparent !important;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
+  outline: none;
+  text-indent: 9999px;
+  /* LTR */ }
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/contextual\/contextual\.theme\.scss}line{font-family:\0000345}}
+.contextual-links-trigger:hover,
+.contextual-links-active .contextual-links-trigger {
+  background-position: 2px -18px !important; }
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/contextual\/contextual\.theme\.scss}line{font-family:\0000348}}
+.contextual-links-active .contextual-links-trigger {
+  /* Positioning */
+  position: relative;
+  z-index: 1;
+  /* Other Declarations */
+  background-color: #fff !important;
+  border-color: #ccc !important;
+  border-bottom: none !important;
+  -moz-border-radius-bottomleft: 0;
+  -webkit-border-bottom-left-radius: 0;
+  border-bottom-left-radius: 0;
+  -moz-border-radius-bottomright: 0;
+  -webkit-border-bottom-right-radius: 0;
+  border-bottom-right-radius: 0; }
+
+/**
+ * Contextual links.
+ */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/contextual\/contextual\.theme\.scss}line{font-family:\0000362}}
+.contextual-links {
+  /* Position */
+  position: absolute;
+  right: 0;
+  /* LTR */
+  top: 18px;
+  /* Box Model */
+  margin: 0 !important;
+  padding: 0 !important;
+  /* Other Declarations */
+  background-color: #fff !important;
+  border: 1px solid #ccc !important;
+  -webkit-border-radius: 4px 0 4px 4px;
+  -moz-border-radius: 4px 0 4px 4px;
+  -ms-border-radius: 4px 0 4px 4px;
+  -o-border-radius: 4px 0 4px 4px;
+  border-radius: 4px 0 4px 4px;
+  /* LTR */
+  text-align: left;
+  white-space: nowrap; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/contextual\/contextual\.theme\.scss}line{font-family:\0000377}}
+  .contextual-links li {
+    margin: 0 !important;
+    padding: 0 !important;
+    line-height: 100%;
+    list-style: none;
+    list-style-image: none; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/contextual\/contextual\.theme\.scss}line{font-family:\0000385}}
+  .contextual-links a {
+    display: block;
+    margin: 0 !important;
+    padding: 5px 10px !important;
+    color: #333 !important;
+    font-size: 12px !important; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/contextual\/contextual\.theme\.scss}line{font-family:\0000392}}
+    .contextual-links a:hover {
+      background-color: #bfdcee !important; }
