--- a/sites/all/themes/omega/omega/css/modules/filter/filter.theme.css
+++ b/sites/all/themes/omega/omega/css/modules/filter/filter.theme.css
@@ -7,36 +7,43 @@
  * Contains the form item being filtered, the filter format form item and
  * formatting guidelines.
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/filter\/filter\.theme\.scss}line{font-family:\0000312}}
 .text-format-wrapper .form-item {
   margin-bottom: 0; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/filter\/filter\.theme\.scss}line{font-family:\0000315}}
 .text-format-wrapper .description {
   margin-top: 0.5em; }
 
 /* Filter Format Wrapper. */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/filter\/filter\.theme\.scss}line{font-family:\0000321}}
 .filter-wrapper {
   border-top: 0;
   margin: 0; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/filter\/filter\.theme\.scss}line{font-family:\0000325}}
   .filter-wrapper .form-item {
     float: left;
     padding: 0 0 0.5em 1.5em; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/filter\/filter\.theme\.scss}line{font-family:\0000329}}
     .filter-wrapper .form-item label {
       display: inline; }
 
 /* More Information Link. */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/filter\/filter\.theme\.scss}line{font-family:\0000336}}
 .filter-help {
   float: right;
   padding: 0 1.5em 0.5em; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/filter\/filter\.theme\.scss}line{font-family:\0000340}}
   .filter-help a {
-    background: transparent image-url("misc/help.png") right center no-repeat;
+    background: transparent url('../../../images/misc/help.png?1432693563') right center no-repeat;
     padding: 0 20px; }
 
 /* Filter Guidelines */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/filter\/filter\.theme\.scss}line{font-family:\0000347}}
 .filter-guidelines {
   clear: left;
   padding: 0 1.5em; }
 
 /* Filter formatting tips. */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/filter\/filter\.theme\.scss}line{font-family:\0000353}}
 .tips {
   font-size: 0.9em; }
-
-/*# sourceMappingURL=filter.theme.css.map */
