--- a/sites/all/themes/omega/omega/css/modules/aggregator/aggregator.theme.css
+++ b/sites/all/themes/omega/omega/css/modules/aggregator/aggregator.theme.css
@@ -2,9 +2,8 @@
  * @file
  * Aggregator theme CSS.
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/aggregator\/aggregator\.theme\.scss}line{font-family:\000036}}
 .feed-source .feed-icon {
   float: right;
   /* LTR */
   display: block; }
-
-/*# sourceMappingURL=aggregator.theme.css.map */
