--- a/sites/all/themes/omega/omega/css/modules/block/block.admin.css
+++ b/sites/all/themes/omega/omega/css/modules/block/block.admin.css
@@ -2,12 +2,13 @@
  * @file
  * Styles for the block admin page.
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/block\/block\.admin\.scss}line{font-family:\000036}}
 .blocks-admin .region-title {
   font-weight: bold; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/block\/block\.admin\.scss}line{font-family:\000039}}
 .blocks-admin .region-message {
   font-weight: normal;
   color: #999; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/block\/block\.admin\.scss}line{font-family:\0000313}}
 .blocks-admin .region-populated {
   display: none; }
-
-/*# sourceMappingURL=block.admin.css.map */
