--- a/sites/all/themes/omega/omega/css/modules/book/book.theme-rtl.css
+++ b/sites/all/themes/omega/omega/css/modules/book/book.theme-rtl.css
@@ -2,15 +2,16 @@
  * @file
  * Basic default book structural CSS for right to left languages.
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/book\/book\.theme-rtl\.scss}line{font-family:\000035}}
 .book-navigation__previous {
   float: right;
   text-align: right; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/book\/book\.theme-rtl\.scss}line{font-family:\000039}}
 .book-navigation__up {
   float: right; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/book\/book\.theme-rtl\.scss}line{font-family:\0000312}}
 .book-navigation__next {
   float: left;
   text-align: left; }
-
-/*# sourceMappingURL=book.theme-rtl.css.map */
