--- a/sites/all/themes/omega/omega/css/modules/color/color.admin.css
+++ b/sites/all/themes/omega/omega/css/modules/color/color.admin.css
@@ -3,10 +3,12 @@
  * Stylesheet for the administration pages of the Color module.
  */
 /* Farbtastic placement */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/color\/color\.admin\.scss}line{font-family:\000037}}
 .color-form {
   max-width: 50em;
   position: relative; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/color\/color\.admin\.scss}line{font-family:\0000311}}
 #placeholder {
   position: absolute;
   top: 0;
@@ -14,6 +16,7 @@
   /* LTR */ }
 
 /* Palette */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/color\/color\.admin\.scss}line{font-family:\0000318}}
 .color-form .form-item {
   height: 2em;
   line-height: 2em;
@@ -21,6 +24,7 @@
   /* LTR */
   margin: 0.5em 0; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/color\/color\.admin\.scss}line{font-family:\0000324}}
 .color-form label {
   float: left;
   /* LTR */
@@ -28,17 +32,20 @@
   /* LTR */
   width: 10em; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/color\/color\.admin\.scss}line{font-family:\0000330}}
 .color-form .form-text,
 .color-form .form-select {
   float: left;
   /* LTR */ }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/color\/color\.admin\.scss}line{font-family:\0000333}}
 .color-form .form-text {
   text-align: center;
   margin-right: 5px;
   /* LTR */
   cursor: pointer; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/color\/color\.admin\.scss}line{font-family:\0000339}}
 #palette .hook {
   float: left;
   /* LTR */
@@ -46,20 +53,24 @@
   width: 16px;
   height: 16px; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/color\/color\.admin\.scss}line{font-family:\0000347}}
 #palette .down,
 #palette .up,
 #palette .both {
-  background: image-url("modules/color/hook.png") no-repeat 100% 0;
+  background: url('../../../images/modules/color/hook.png?1432693563') no-repeat 100% 0;
   /* LTR */ }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/color\/color\.admin\.scss}line{font-family:\0000350}}
 #palette .up {
   background-position: 100% -27px;
   /* LTR */ }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/color\/color\.admin\.scss}line{font-family:\0000353}}
 #palette .both {
   background-position: 100% -54px;
   /* LTR */ }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/color\/color\.admin\.scss}line{font-family:\0000357}}
 #palette .lock {
   float: left;
   /* LTR */
@@ -69,26 +80,29 @@
   /* LTR */
   width: 20px;
   height: 25px;
-  background: image-url("modules/color/lock.png") no-repeat 50% 2px;
+  background: url('../../../images/modules/color/lock.png?1432693563') no-repeat 50% 2px;
   cursor: pointer; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/color\/color\.admin\.scss}line{font-family:\0000367}}
 #palette .unlocked {
   background-position: 50% -22px; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/color\/color\.admin\.scss}line{font-family:\0000370}}
 #palette .form-item {
   width: 20em; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/color\/color\.admin\.scss}line{font-family:\0000373}}
 #palette .item-selected {
   background: #eee; }
 
 /* Preview */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/color\/color\.admin\.scss}line{font-family:\0000378}}
 #preview {
   display: none; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/color\/color\.admin\.scss}line{font-family:\0000381}}
 html.js #preview {
   display: block;
   position: relative;
   float: left;
   /* LTR */ }
-
-/*# sourceMappingURL=color.admin.css.map */
