--- a/sites/all/themes/omega/omega/css/modules/comment/comment.theme-rtl.css
+++ b/sites/all/themes/omega/omega/css/modules/comment/comment.theme-rtl.css
@@ -2,8 +2,7 @@
  * @file
  * Right-to-left comment module look and feel styling.
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/comment\/comment\.theme-rtl\.scss}line{font-family:\000036}}
 .indented {
   margin-left: 0;
   margin-right: 25px; }
-
-/*# sourceMappingURL=comment.theme-rtl.css.map */
