--- a/sites/all/themes/omega/omega/css/modules/comment/comment.theme.css
+++ b/sites/all/themes/omega/omega/css/modules/comment/comment.theme.css
@@ -2,8 +2,7 @@
  * @file
  * Comment module look and feel styling.
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/comment\/comment\.theme\.scss}line{font-family:\000036}}
 .indented {
   margin-left: 25px;
   /* LTR */ }
-
-/*# sourceMappingURL=comment.theme.css.map */
