--- a/sites/all/themes/omega/omega/css/modules/contextual/contextual.base-rtl.css
+++ b/sites/all/themes/omega/omega/css/modules/contextual/contextual.base-rtl.css
@@ -5,11 +5,11 @@
 /**
  * Contextual links structure.
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/contextual\/contextual\.base-rtl\.scss}line{font-family:\000039}}
 .contextual-links-wrapper {
   left: 5px;
   right: auto; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/contextual\/contextual\.base-rtl\.scss}line{font-family:\0000313}}
 .contextual-links-trigger {
   text-align: left; }
-
-/*# sourceMappingURL=contextual.base-rtl.css.map */
