--- a/sites/all/themes/omega/omega/css/modules/contextual/contextual.base.css
+++ b/sites/all/themes/omega/omega/css/modules/contextual/contextual.base.css
@@ -5,11 +5,13 @@
 /**
  * Contextual links behaviour.
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/contextual\/contextual\.base\.scss}line{font-family:\0000311}}
 .contextual-links-wrapper,
 .contextual-links-trigger,
 .contextual-links {
   display: none !important; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/contextual\/contextual\.base\.scss}line{font-family:\0000317}}
 html.js .contextual-links-wrapper,
 .contextual-links-region:hover .contextual-links-trigger,
 .contextual-links-active .contextual-links-trigger,
@@ -19,10 +21,12 @@ html.js .contextual-links-wrapper,
 /**
  * Contextual links structure.
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/contextual\/contextual\.base\.scss}line{font-family:\0000324}}
 .contextual-links-region {
   outline: none;
   position: relative; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/contextual\/contextual\.base\.scss}line{font-family:\0000328}}
 .contextual-links-wrapper {
   position: absolute;
   z-index: 999;
@@ -30,9 +34,8 @@ html.js .contextual-links-wrapper,
   /* LTR */
   top: 2px; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/contextual\/contextual\.base\.scss}line{font-family:\0000334}}
 .contextual-links-trigger {
   overflow: hidden;
   text-align: right;
   /* LTR */ }
-
-/*# sourceMappingURL=contextual.base.css.map */
