--- a/sites/all/themes/omega/omega/css/modules/field_ui/field_ui.admin-rtl.css
+++ b/sites/all/themes/omega/omega/css/modules/field_ui/field_ui.admin-rtl.css
@@ -5,10 +5,10 @@
 /**
  *'Manage fields' and 'Manage display' overviews.
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/field_ui\/field_ui\.admin-rtl\.scss}line{font-family:\000039}}
 .field-ui-overview {
   /* Add New Row */ }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/field_ui\/field_ui\.admin-rtl\.scss}line{font-family:\0000311}}
   .field-ui-overview .add-new .label-input {
     float: right;
     /* LTR */ }
-
-/*# sourceMappingURL=field_ui.admin-rtl.css.map */
