--- a/sites/all/themes/omega/omega/css/modules/forum/forum.theme-rtl.css
+++ b/sites/all/themes/omega/omega/css/modules/forum/forum.theme-rtl.css
@@ -2,9 +2,8 @@
  * @file
  * Right-to-left styling for the Forum module.
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/forum\/forum\.theme-rtl\.scss}line{font-family:\000036}}
 .forum-icon {
   float: right;
   margin-left: 0;
   margin-right: 0.4em; }
-
-/*# sourceMappingURL=forum.theme-rtl.css.map */
