--- a/sites/all/themes/omega/omega/css/modules/image/image.theme-rtl.css
+++ b/sites/all/themes/omega/omega/css/modules/image/image.theme-rtl.css
@@ -5,11 +5,11 @@
 /**
  * Image upload widget.
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/image\/image\.theme-rtl\.scss}line{font-family:\000039}}
 .image-preview {
   float: right;
   padding: 0 0 10px 10px; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/image\/image\.theme-rtl\.scss}line{font-family:\0000313}}
 .image-widget-data {
   float: right; }
-
-/*# sourceMappingURL=image.theme-rtl.css.map */
