--- a/sites/all/themes/omega/omega/css/modules/search/search.theme-rtl.css
+++ b/sites/all/themes/omega/omega/css/modules/search/search.theme-rtl.css
@@ -5,6 +5,7 @@
 /**
  * Search Results
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/search\/search\.theme-rtl\.scss}line{font-family:\000039}}
 .search-result__snippet {
   padding-left: 0;
   padding-right: 1em; }
@@ -12,12 +13,12 @@
 /**
  * Advanced Search Form
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/search\/search\.theme-rtl\.scss}line{font-family:\0000318}}
 .search-advanced .criterion {
   float: right;
   margin-right: 0;
   margin-left: 2em; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/search\/search\.theme-rtl\.scss}line{font-family:\0000323}}
 .search-advanced .action {
   float: right;
   clear: right; }
-
-/*# sourceMappingURL=search.theme-rtl.css.map */
