--- a/sites/all/themes/omega/omega/css/modules/search/search.theme.css
+++ b/sites/all/themes/omega/omega/css/modules/search/search.theme.css
@@ -5,25 +5,27 @@
 /**
  * Search Results
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/search\/search\.theme\.scss}line{font-family:\000039}}
 .search-result__snippet {
   padding-left: 1em;
   /* LTR */ }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/search\/search\.theme\.scss}line{font-family:\0000312}}
 .search-result__info {
   font-size: 0.85em; }
 
 /**
  * Advanced Search Form
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/search\/search\.theme\.scss}line{font-family:\0000320}}
 .search-advanced .criterion {
   float: left;
   /* LTR */
   margin-right: 2em;
   /* LTR */ }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/search\/search\.theme\.scss}line{font-family:\0000324}}
 .search-advanced .action {
   float: left;
   /* LTR */
   clear: left;
   /* LTR */ }
-
-/*# sourceMappingURL=search.theme.css.map */
