--- a/sites/all/themes/omega/omega/css/modules/system/system.admin.css
+++ b/sites/all/themes/omega/omega/css/modules/system/system.admin.css
@@ -6,9 +6,11 @@
  * @file
  * Administration styles for quick inline admin links.
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/adminlink\/_adminlink\.admin\.scss}line{font-family:\000036}}
 small .admin-link:before {
   content: '['; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/adminlink\/_adminlink\.admin\.scss}line{font-family:\000039}}
 small .admin-link:after {
   content: ']'; }
 
@@ -17,21 +19,26 @@ small .admin-link:after {
  * Administration styles for the administration panels.
  */
 /* Admin Panels */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/adminpanel\/_adminpanel\.admin\.scss}line{font-family:\000038}}
 .admin-panel .admin-panel__body {
   padding-left: 1em;
   /* LTR */ }
 
 /* Admin Panel Page Layout */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/adminpanel\/_adminpanel\.admin\.scss}line{font-family:\0000314}}
 .admin {
   padding-top: 15px; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/adminpanel\/_adminpanel\.admin\.scss}line{font-family:\0000317}}
   .admin .left {
     float: left;
     /* LTR */
     width: 47%; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/adminpanel\/_adminpanel\.admin\.scss}line{font-family:\0000321}}
   .admin .right {
     float: right;
     /* LTR */
     width: 47%; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/adminpanel\/_adminpanel\.admin\.scss}line{font-family:\0000325}}
   .admin .expert-link {
     margin-right: 1em;
     /* LTR */
@@ -47,11 +54,14 @@ small .admin-link:after {
 /**
  * Disabled/Enabled Theme Lists
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/appearance\/_appearance\.admin\.scss}line{font-family:\000039}}
 .system-themes-list {
   margin-bottom: 20px; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/appearance\/_appearance\.admin\.scss}line{font-family:\0000312}}
   .system-themes-list h2 {
     margin: 0; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/appearance\/_appearance\.admin\.scss}line{font-family:\0000316}}
 .system-themes-list--disabled {
   padding-top: 20px;
   border-top: 1px solid #cdcdcd; }
@@ -59,12 +69,15 @@ small .admin-link:after {
 /**
  * Theme Selector
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/appearance\/_appearance\.admin\.scss}line{font-family:\0000324}}
 .theme-selector {
   padding-top: 20px; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/appearance\/_appearance\.admin\.scss}line{font-family:\0000327}}
   .theme-selector h3 {
     font-weight: normal; }
 
 /* Theme Selector Screenshot */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/appearance\/_appearance\.admin\.scss}line{font-family:\0000332}}
 .theme-selector__screenshot {
   padding: 2px;
   width: 294px;
@@ -74,14 +87,17 @@ small .admin-link:after {
   text-align: center; }
 
 /* Theme Selector Incompatible Message */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/appearance\/_appearance\.admin\.scss}line{font-family:\0000341}}
 .theme-selector__incompatible {
   margin-top: 10px;
   font-weight: bold; }
 
 /* Theme Selector Links */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/appearance\/_appearance\.admin\.scss}line{font-family:\0000346}}
 .theme-selector__operations {
   margin: 10px 0 0 0;
   padding: 0; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/appearance\/_appearance\.admin\.scss}line{font-family:\0000350}}
   .theme-selector__operations li {
     float: left;
     /* LTR */
@@ -89,33 +105,42 @@ small .admin-link:after {
     list-style-type: none; }
 
 /* Theme Selector Default State */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/appearance\/_appearance\.admin\.scss}line{font-family:\0000358}}
 .theme-selector--default h3 {
   font-weight: bold; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/appearance\/_appearance\.admin\.scss}line{font-family:\0000361}}
 .theme-selector--default .theme-selector__screenshot {
   border: 1px solid #aaa; }
 
 /* Theme Selector Enabled State */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/appearance\/_appearance\.admin\.scss}line{font-family:\0000366}}
 .theme-selector--enabled {
   width: 820px; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/appearance\/_appearance\.admin\.scss}line{font-family:\0000369}}
   .theme-selector--enabled .theme-selector__info {
     float: right;
     /* LTR */
     width: 500px; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/appearance\/_appearance\.admin\.scss}line{font-family:\0000373}}
   .theme-selector--enabled h3 {
     margin-top: 0; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/appearance\/_appearance\.admin\.scss}line{font-family:\0000376}}
   .theme-selector--enabled .theme-selector__screenshot {
     float: left;
     /* LTR */ }
 
 /* Theme Selector Disabled State */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/appearance\/_appearance\.admin\.scss}line{font-family:\0000381}}
 .theme-selector--disabled {
   float: left;
   /* LTR */
   width: 300px;
   padding: 20px 20px 20px 0;
   /* LTR */ }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/appearance\/_appearance\.admin\.scss}line{font-family:\0000386}}
   .theme-selector--disabled .theme-selector__info {
     min-height: 170px; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/appearance\/_appearance\.admin\.scss}line{font-family:\0000389}}
   .theme-selector--disabled .theme-selector__screenshot {
     width: 194px;
     height: 144px;
@@ -124,6 +149,7 @@ small .admin-link:after {
 /**
  * Admin Theme Selector Form
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/appearance\/_appearance\.admin\.scss}line{font-family:\0000399}}
 .system-themes-admin-form {
   clear: left; }
 
@@ -131,6 +157,7 @@ small .admin-link:after {
  * @file
  * Administration styles for compact links.
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/compactlink\/_compactlink\.admin\.scss}line{font-family:\000036}}
 .compact-link {
   margin: 0 0 0.5em 0; }
 
@@ -139,45 +166,55 @@ small .admin-link:after {
  * Administration styles for the modules table and help.
  */
 /* Module State Flags */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/modules\/_modules\.admin\.scss}line{font-family:\000037}}
 .admin-disabled {
   color: #800; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/modules\/_modules\.admin\.scss}line{font-family:\0000310}}
 .admin-enabled {
   color: #080; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/modules\/_modules\.admin\.scss}line{font-family:\0000313}}
 .admin-missing {
   color: #f00; }
 
 /* Incompatible Modules */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/modules\/_modules\.admin\.scss}line{font-family:\0000318}}
 .incompatible {
   font-weight: bold; }
 
 /* Module Requirements */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/modules\/_modules\.admin\.scss}line{font-family:\0000324}}
 .admin-requirements,
 .admin-required {
   font-size: 0.9em;
   color: #444; }
 
 /* Module Operation Links */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/modules\/_modules\.admin\.scss}line{font-family:\0000330}}
 .module-link {
   display: block;
   padding: 1px 0 1px 20px;
   /* LTR */
   white-space: nowrap; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/modules\/_modules\.admin\.scss}line{font-family:\0000335}}
 .module-link-help {
-  background: image-url("misc/help.png") 0 50% no-repeat;
+  background: url('../../../images/misc/help.png?1432693563') 0 50% no-repeat;
   /* LTR */ }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/modules\/_modules\.admin\.scss}line{font-family:\0000338}}
 .module-link-permissions {
-  background: image-url("misc/permissions.png") 0 50% no-repeat;
+  background: url('../../../images/misc/permissions.png?1432693563') 0 50% no-repeat;
   /* LTR */ }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/modules\/_modules\.admin\.scss}line{font-family:\0000341}}
 .module-link-configure {
-  background: image-url("misc/configure.png") 0 50% no-repeat;
+  background: url('../../../images/misc/configure.png?1432693563') 0 50% no-repeat;
   /* LTR */ }
 
 /* Module Help */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/modules\/_modules\.admin\.scss}line{font-family:\0000346}}
 .module-help {
   float: right;
   /* LTR */
@@ -189,24 +226,30 @@ small .admin-link:after {
  * Administration styles for the system status report.
  */
 /* Status Icons */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/statusreport\/_statusreport\.admin\.scss}line{font-family:\000038}}
 .system-status-report .status-icon {
   height: 16px;
   width: 16px;
   background-repeat: no-repeat; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/statusreport\/_statusreport\.admin\.scss}line{font-family:\0000313}}
 .system-status-report .error .status-icon {
-  background-image: image-url("misc/message-16-error.png"); }
+  background-image: url('../../../images/misc/message-16-error.png?1432693563'); }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/statusreport\/_statusreport\.admin\.scss}line{font-family:\0000316}}
 .system-status-report .warning .status-icon {
-  background-image: image-url("misc/message-16-warning.png"); }
+  background-image: url('../../../images/misc/message-16-warning.png?1432693563'); }
 
 /* Merge Cells */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/statusreport\/_statusreport\.admin\.scss}line{font-family:\0000323}}
 .merge-down,
 .merge-down td {
   border-bottom-width: 0 !important; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/statusreport\/_statusreport\.admin\.scss}line{font-family:\0000328}}
 .merge-up,
 .merge-up td {
   border-top-width: 0 !important; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/statusreport\/_statusreport\.admin\.scss}line{font-family:\0000331}}
 .merge-up td {
   padding: 0 6px 8px 28px;
   /* LTR */ }
@@ -215,15 +258,16 @@ small .admin-link:after {
  * @file
  * Administration styles for the theme settings.
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/themesettings\/_themesettings\.admin\.scss}line{font-family:\000036}}
 .theme-settings-left {
   float: left;
   width: 49%; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/themesettings\/_themesettings\.admin\.scss}line{font-family:\0000310}}
 .theme-settings-right {
   float: right;
   width: 49%; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/admin\/themesettings\/_themesettings\.admin\.scss}line{font-family:\0000314}}
 .theme-settings-bottom {
   clear: both; }
-
-/*# sourceMappingURL=system.admin.css.map */
