--- a/sites/all/themes/omega/omega/css/modules/system/system.theme-rtl.css
+++ b/sites/all/themes/omega/omega/css/modules/system/system.theme-rtl.css
@@ -7,6 +7,7 @@
  * Basic right to left styling for common HTML elements.
  */
 /* Tables */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/elements\/_elements\.theme-rtl\.scss}line{font-family:\000037}}
 th {
   padding-left: 1em;
   padding-right: 0;
@@ -18,20 +19,21 @@ th {
  *
  * @see collapse.js
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/collapsible\/_collapsible\.theme-rtl\.scss}line{font-family:\000038}}
 html.js fieldset.collapsible .fieldset-legend {
   padding-left: 0;
   padding-right: 15px;
   background-position: 98% 75%; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/collapsible\/_collapsible\.theme-rtl\.scss}line{font-family:\0000313}}
 html.js fieldset.collapsed .fieldset-legend {
-  background-image: image-url("misc/menu-collapsed-rtl.png");
+  background-image: url('../../../images/misc/menu-collapsed-rtl.png?1432693563');
   background-position: 98% 50%; }
 
 /**
  * @file
  * Right to left theme for the more link.
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/morelink\/_morelink\.theme-rtl\.scss}line{font-family:\000036}}
 .more-link {
   text-align: left; }
-
-/*# sourceMappingURL=system.theme-rtl.css.map */
