--- a/sites/all/themes/omega/omega/css/modules/system/system.theme.css
+++ b/sites/all/themes/omega/omega/css/modules/system/system.theme.css
@@ -7,13 +7,16 @@
  * Basic styling for common HTML elements.
  */
 /* Fieldsets */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/elements\/_elements\.theme\.scss}line{font-family:\000037}}
 fieldset {
   margin-bottom: 1em; }
 
 /* Tables */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/elements\/_elements\.theme\.scss}line{font-family:\0000312}}
 table {
   border-collapse: collapse; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/elements\/_elements\.theme\.scss}line{font-family:\0000315}}
 th {
   padding-right: 1em;
   /* LTR */
@@ -21,10 +24,12 @@ th {
   text-align: left;
   /* LTR */ }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/elements\/_elements\.theme\.scss}line{font-family:\0000321}}
 tr.even,
 tr.odd {
   background-color: #eee; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/elements\/_elements\.theme\.scss}line{font-family:\0000324}}
 tr.odd {
   background-color: #ddd; }
 
@@ -34,10 +39,12 @@ tr.odd {
  *
  * @see autocomplete.js
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/autocomplete\/_autocomplete\.theme\.scss}line{font-family:\000038}}
 #autocomplete {
   background: #fff;
   border: 1px solid;
   color: #000; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/autocomplete\/_autocomplete\.theme\.scss}line{font-family:\0000313}}
   #autocomplete .selected {
     background: #0072b9;
     color: #fff; }
@@ -48,22 +55,26 @@ tr.odd {
  *
  * @see collapse.js
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/collapsible\/_collapsible\.theme\.scss}line{font-family:\000038}}
 html.js fieldset.collapsible .fieldset-legend {
   padding-left: 15px;
   /* LTR */
-  background: image-url("misc/menu-expanded.png") 5px 65% no-repeat;
+  background: url('../../../images/misc/menu-expanded.png?1432693563') 5px 65% no-repeat;
   /* LTR */ }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/collapsible\/_collapsible\.theme\.scss}line{font-family:\0000312}}
 html.js fieldset.collapsed {
   border-bottom-width: 0;
   border-left-width: 0;
   border-right-width: 0; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/collapsible\/_collapsible\.theme\.scss}line{font-family:\0000317}}
   html.js fieldset.collapsed .fieldset-legend {
-    background-image: image-url("misc/menu-collapsed.png");
+    background-image: url('../../../images/misc/menu-collapsed.png?1432693563');
     /* LTR */
     background-position: 5px 50%;
     /* LTR */ }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/collapsible\/_collapsible\.theme\.scss}line{font-family:\0000322}}
 .fieldset-legend .summary {
   margin-left: 0.5em;
   color: #999;
@@ -75,9 +86,11 @@ html.js fieldset.collapsed {
  *
  * @see tabledrag.js
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/tabledrag\/_tabledrag\.theme\.scss}line{font-family:\000038}}
 .drag {
   background-color: #fffff0; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/tabledrag\/_tabledrag\.theme\.scss}line{font-family:\0000311}}
 .drag-previous {
   background-color: #ffd; }
 
@@ -87,8 +100,10 @@ html.js fieldset.collapsed {
  *
  * @see progress.js
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/progress\/_progress\.theme\.scss}line{font-family:\000037}}
 .progress {
   font-weight: bold; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/progress\/_progress\.theme\.scss}line{font-family:\0000310}}
   .progress .bar {
     background: #ccc;
     border-color: #666;
@@ -96,8 +111,9 @@ html.js fieldset.collapsed {
     -moz-border-radius: 3px;
     -webkit-border-radius: 3px;
     border-radius: 3px; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/progress\/_progress\.theme\.scss}line{font-family:\0000318}}
   .progress .filled {
-    background: #0072b9 image-url("misc/progress.gif"); }
+    background: #0072b9 url('../../../images/misc/progress.gif?1432693563'); }
 
 /**
  * @file
@@ -105,9 +121,11 @@ html.js fieldset.collapsed {
  *
  * @see tableselect.js
 */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/tableselect\/_tableselect\.theme\.scss}line{font-family:\000038}}
 .selected td {
   background: #ffc; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/tableselect\/_tableselect\.theme\.scss}line{font-family:\0000312}}
 .checkbox,
 .checkbox {
   text-align: center; }
@@ -117,50 +135,61 @@ html.js fieldset.collapsed {
  * Theme for markup generated by Form API.
  */
 /* Generic Form Items. */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/form\/_form\.theme\.scss}line{font-family:\000038}}
 .form-item,
 .form-actions {
   margin-bottom: 1em; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/form\/_form\.theme\.scss}line{font-family:\0000311}}
   .form-item label,
   .form-actions label {
     display: block;
     font-weight: bold; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/form\/_form\.theme\.scss}line{font-family:\0000315}}
   .form-item .description,
   .form-actions .description {
     font-size: 0.85em; }
 
 /* Checkboxes and Radios */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/form\/_form\.theme\.scss}line{font-family:\0000323}}
 .form-checkboxes .form-item,
 .form-radios .form-item {
   margin-bottom: 0.4em; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/form\/_form\.theme\.scss}line{font-family:\0000326}}
 .form-checkboxes .description,
 .form-radios .description {
   margin-left: 2.4em; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/form\/_form\.theme\.scss}line{font-family:\0000330}}
 label.option {
   display: inline;
   font-weight: normal; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/form\/_form\.theme\.scss}line{font-family:\0000335}}
 .form-checkbox,
 .form-radio {
   vertical-align: middle; }
 
 /* Errors */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/form\/_form\.theme\.scss}line{font-family:\0000341}}
 .marker,
 .form-required {
   color: #f00; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/form\/_form\.theme\.scss}line{font-family:\0000346}}
 input.error,
 textarea.error,
 select.error {
   border: 2px solid red; }
 
 /* Table Form Items */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/form\/_form\.theme\.scss}line{font-family:\0000351}}
 tr .form-item {
   margin-top: 0;
   margin-bottom: 0;
   white-space: nowrap; }
 
 /* Inline Items */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/form\/_form\.theme\.scss}line{font-family:\0000359}}
 .container-inline .form-actions,
 .container-inline.form-actions {
   margin-top: 0;
@@ -170,9 +199,11 @@ tr .form-item {
  * @file
  * Theme for the markup generated by theme_tablesort_indicator().
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/tablesort\/_tablesort\.theme\.scss}line{font-family:\000036}}
 th.active img {
   display: inline; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/tablesort\/_tablesort\.theme\.scss}line{font-family:\000039}}
 td.active {
   background-color: #ddd; }
 
@@ -180,6 +211,7 @@ td.active {
  * @file
  * Theme for more links.
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/morelink\/_morelink\.theme\.scss}line{font-family:\000036}}
 .more-link {
   display: block;
   text-align: right;
@@ -189,18 +221,19 @@ td.active {
  * @file
  * Theme for markup generated by theme_pager().
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/pager\/_pager\.theme\.scss}line{font-family:\000036}}
 .pager {
   clear: both;
   padding: 0;
   text-align: center; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/pager\/_pager\.theme\.scss}line{font-family:\0000311}}
 .pager__item {
   display: inline;
   padding: 0.5em;
   background-image: none;
   list-style-type: none; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/system\/pager\/_pager\.theme\.scss}line{font-family:\0000318}}
 .pager__item--current {
   font-weight: bold; }
-
-/*# sourceMappingURL=system.theme.css.map */
