--- a/sites/all/themes/omega/omega/css/modules/user/user.admin-rtl.css
+++ b/sites/all/themes/omega/omega/css/modules/user/user.admin-rtl.css
@@ -5,6 +5,7 @@
 /**
  * User Permissions Page
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/user\/user\.admin-rtl\.scss}line{font-family:\000039}}
 .user-admin-permissions .permission {
   padding-left: 0;
   padding-right: 1.5em; }
@@ -15,9 +16,8 @@
  * Override default textfield float to put the "Add role" button next to
  * the input textfield.
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/user\/user\.admin-rtl\.scss}line{font-family:\0000322}}
 .user-admin-roles .form-item-name {
   float: right;
   margin-left: 1em;
   margin-right: 0; }
-
-/*# sourceMappingURL=user.admin-rtl.css.map */
