--- a/sites/all/themes/omega/omega/css/modules/user/user.admin.css
+++ b/sites/all/themes/omega/omega/css/modules/user/user.admin.css
@@ -5,11 +5,14 @@
 /**
  * User Permissions Page
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/user\/user\.admin\.scss}line{font-family:\000039}}
 .user-admin-permissions .module {
   font-weight: bold; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/user\/user\.admin\.scss}line{font-family:\0000312}}
 .user-admin-permissions .permission {
   padding-left: 1.5em;
   /* LTR */ }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/user\/user\.admin\.scss}line{font-family:\0000315}}
 .user-admin-permissions .form-item {
   white-space: normal; }
 
@@ -19,12 +22,12 @@
  * Override default textfield float to put the "Add role" button next to
  * the input textfield.
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/user\/user\.admin\.scss}line{font-family:\0000327}}
 .user-admin-roles .edit-name {
   clear: both; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/user\/user\.admin\.scss}line{font-family:\0000330}}
 .user-admin-roles .form-item-name {
   float: left;
   /* LTR */
   margin-right: 1em;
   /* LTR */ }
-
-/*# sourceMappingURL=user.admin.css.map */
