--- a/sites/all/themes/omega/omega/css/modules/user/user.base.css
+++ b/sites/all/themes/omega/omega/css/modules/user/user.base.css
@@ -2,7 +2,6 @@
  * @file
  * Base styles for the user module.
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/mampstack-5\.4\.40-0\/apache2\/htdocs\/drupalcl\/sites\/all\/themes\/omega\/omega\/sass\/modules\/user\/user\.base\.scss}line{font-family:\000035}}
 div.password-confirm {
   visibility: hidden; }
-
-/*# sourceMappingURL=user.base.css.map */
