--- a/themes/drupalcl/style/css/drupalcl.css
+++ b/themes/drupalcl/style/css/drupalcl.css
@@ -1,1 +1,55 @@
-/* SAMPLE CSS FILE CONTENTS */
+/* SAMPLE SCSS FILE CONTENTS */
+@font-face {
+  font-family: 'fira_sansbold';
+  src: url("../../fonts/firasans/firasans-bold-webfont.eot");
+  src: url("../../fonts/firasans/firasans-bold-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/firasans/firasans-bold-webfont.woff2") format("woff2"), url("../../fonts/firasans/firasans-bold-webfont.woff") format("woff"), url("../../fonts/firasans/firasans-bold-webfont.ttf") format("truetype"), url("../../fonts/firasans/firasans-bold-webfont.svg#fira_sansbold") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'fira_sanslight';
+  src: url("../../fonts/firasans/firasans-light-webfont.eot");
+  src: url("../../fonts/firasans/firasans-light-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/firasans/firasans-light-webfont.woff2") format("woff2"), url("../../fonts/firasans/firasans-light-webfont.woff") format("woff"), url("../../fonts/firasans/firasans-light-webfont.ttf") format("truetype"), url("../../fonts/firasans/firasans-light-webfont.svg#fira_sanslight") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'fira_sansmedium';
+  src: url("../../fonts/firasans/firasans-medium-webfont.eot");
+  src: url("../../fonts/firasans/firasans-medium-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/firasans/firasans-medium-webfont.woff2") format("woff2"), url("../../fonts/firasans/firasans-medium-webfont.woff") format("woff"), url("../../fonts/firasans/firasans-medium-webfont.ttf") format("truetype"), url("../../fonts/firasans/firasans-medium-webfont.svg#fira_sansmedium") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'fira_sansregular';
+  src: url("../../fonts/firasans/firasans-regular-webfont.eot");
+  src: url("../../fonts/firasans/firasans-regular-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/firasans/firasans-regular-webfont.woff2") format("woff2"), url("../../fonts/firasans/firasans-regular-webfont.woff") format("woff"), url("../../fonts/firasans/firasans-regular-webfont.ttf") format("truetype"), url("../../fonts/firasans/firasans-regular-webfont.svg#fira_sansregular") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'fira_sansultra';
+  src: url("../../fonts/firasans/firasans-ultra-webfont.eot");
+  src: url("../../fonts/firasans/firasans-ultra-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/firasans/firasans-ultra-webfont.woff2") format("woff2"), url("../../fonts/firasans/firasans-ultra-webfont.woff") format("woff"), url("../../fonts/firasans/firasans-ultra-webfont.ttf") format("truetype"), url("../../fonts/firasans/firasans-ultra-webfont.svg#fira_sansultra") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+/*
+* Colors
+*/
+/* line 77, ../scss/drupalcl.scss */
+body {
+  background-color: white;
+  font-family: 'fira_sansregular'; }
+
+/* line 81, ../scss/drupalcl.scss */
+h1 {
+  font-family: 'fira_sansbold'; }
+
+/* line 85, ../scss/drupalcl.scss */
+header.outer-wrapper {
+  background-color: #1565c0; }
+
+/* line 93, ../scss/drupalcl.scss */
+nav.menu--main ul li a, nav.menu--main ul li .is-active {
+  color: white; }
