--- a/themes/drupalcl/style/css/elements/forms.css
+++ b/themes/drupalcl/style/css/elements/forms.css
@@ -16,18 +16,12 @@
   padding: 0.35em 0.5em;
   font-size: 1.2em;
   font-weight: normal;
-  border: 2px solid #FAFAFA;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  -webkit-box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.5);
-  -moz-box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.5);
-  box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.5); }
+  border: 2px solid #fafafa; }
   /* line 23, ../../scss/elements/forms.scss */
   .form-type-textfield input:focus,
   .field--type-entity-reference input:focus,
   .form-type-textarea input:focus {
-    border: 2px solid #047AAB; }
+    border: 2px solid #047aab; }
 /* line 27, ../../scss/elements/forms.scss */
 .form-type-textfield textarea,
 .field--type-entity-reference textarea,
@@ -37,18 +31,12 @@
   padding: 0.35em 0.25em;
   font-size: 1.2em;
   font-weight: normal;
-  border: 2px solid #FAFAFA;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  -webkit-box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.5);
-  -moz-box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.5);
-  box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.5); }
+  border: 2px solid #fafafa; }
   /* line 37, ../../scss/elements/forms.scss */
   .form-type-textfield textarea:focus,
   .field--type-entity-reference textarea:focus,
   .form-type-textarea textarea:focus {
-    border: 2px solid #047AAB; }
+    border: 2px solid #047aab; }
 /* line 41, ../../scss/elements/forms.scss */
 .form-type-textfield .description,
 .field--type-entity-reference .description,
@@ -65,16 +53,10 @@
   padding: 0.35em 0.25em;
   font-size: 1.2em;
   font-weight: normal;
-  border: 2px solid #FAFAFA;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  -webkit-box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.5);
-  -moz-box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.5);
-  box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.5); }
+  border: 2px solid #fafafa; }
   /* line 64, ../../scss/elements/forms.scss */
   .field--type-created .form-type-date input:focus {
-    border: 2px solid #047AAB; }
+    border: 2px solid #047aab; }
 /* line 70, ../../scss/elements/forms.scss */
 .field--type-created .description {
   margin-top: 0.5em;
@@ -84,7 +66,7 @@
 .vertical-tabs .vertical-tabs__menu-item-summary {
   font-size: 0.75em; }
 
-/* line 82, ../../scss/elements/forms.scss */
+/* line 83, ../../scss/elements/forms.scss */
 a.button,
 input.button {
   text-decoration: none;
@@ -92,17 +74,11 @@ input.button {
   padding: 0.25em 0.5em;
   background: none;
   border: none;
-  background: #FAFAFA;
-  border: 2px solid #1A1A1A;
+  background: #fafafa;
+  border: 2px solid #1a1a1a;
   font-size: 1em;
-  color: #5A5A5A;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  -webkit-box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.5);
-  -moz-box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.5);
-  box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.5); }
-  /* line 98, ../../scss/elements/forms.scss */
+  color: #5a5a5a; }
+  /* line 99, ../../scss/elements/forms.scss */
   a.button:hover, a.button:focus,
   input.button:hover,
   input.button:focus {
