--- a/themes/drupalcl/style/css/elements/site-branding.css
+++ b/themes/drupalcl/style/css/elements/site-branding.css
@@ -11,10 +11,7 @@
     float: left;
     max-width: 90px;
     height: auto;
-    margin-right: 25px;
-    transition: all 0.25s ease-in-out;
-    -moz-transition: all 0.25s ease-in-out;
-    -webkit-transition: all 0.25s ease-in-out; }
+    margin-right: 25px; }
     /* line 42, ../../scss/elements/site-branding.scss */
     #site-branding #logo a {
       display: block; }
@@ -30,9 +27,6 @@
     color: #047aab; }
     /* line 70, ../../scss/elements/site-branding.scss */
     #site-branding .site-name a {
-      transition: all 0.25s ease-in-out;
-      -moz-transition: all 0.25s ease-in-out;
-      -webkit-transition: all 0.25s ease-in-out;
       text-decoration: none;
       color: #047aab; }
       /* line 76, ../../scss/elements/site-branding.scss */
@@ -40,5 +34,5 @@
         color: rgba(4, 122, 171, 0.85); }
   /* line 82, ../../scss/elements/site-branding.scss */
   #site-branding .site-slogan {
-    color: #777;
+    color: #777777;
     font-variant: small-caps; }
